--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 offset-sm-3">
-                <alert></alert>
+                <notification></notification>
                 <router-outlet></router-outlet>
             </div>
         </div>
