--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <a class="nav-item nav-link" (click)="logout()">Logout</a>
     </div>
 </nav>
-<div class="h-100 d-inline-block">
+<div class="h-100 w-100 d-inline-block">
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
                 <notification></notification>
@@ -13,12 +13,11 @@
     </div>
 </div>
             <div class="alert alert-info information">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet elit sit amet aliquet consectetur. Vestibulum id dictum erat. Mauris sapien enim, sagittis tincidunt mattis non, ultrices nec dui. Nulla eu commodo lectus. Nunc eu cursus ante. 
-                    Mauris ullamcorper auctor orci.</p>
+                <p>This application storing data at localstorage</p>
                 <ul>
-                    <li>Nulla vitae est aliquam, rhoncus tellus vitae, mollis leo.</li>
-                    <li>Vestibulum sed accumsan justo.</li>
-                    <li>Aenean commodo dui vitae nunc facilisis vulputate ut nec dolor.</li>
+                    <li>please register user and login after register successfully.</li>
+                    <li>Click Genarate dummy date for show 100 data employee.</li>
+                    <li>Click Clear Dummy data for delete all data employee at localstorage.</li>
                 </ul>
             </div>
             </div>
