--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
                 <p>This application storing data at localstorage</p>
                 <ul>
                     <li>please register user and login after register successfully.</li>
-                    <li>Click Genarate dummy date for show 100 data employee.</li>
+                    <li>Click Generate dummy date for show 100 data employee.</li>
                     <li>Click Clear Dummy data for delete all data employee at localstorage.</li>
                 </ul>
             </div>
